tests/sema/fail/v3_fail_nonvoid_missing_return.ep
# COMPILE_FAIL: function must return i64 on all paths

fun main(): i64 {
    if true {
        return 1
    }
}
